Updates from Overleaf

--- a/01_introduction.tex
+++ b/01_introduction.tex
@@ -13,7 +13,7 @@ The textbook, \textit{An Introduction to Reservoir Simulation Using MATLAB/GNU O
 Lie uses an analogue to explain the properties of an oil reservoir. A simplified model of a typical oil reservoir can be compared to a rigid sponge fully soaked in oil. This sponge is under high pressure and with solid walls on all sides such that there is no way for the oil to escape. In reality, the oil lies in between tightly compacted sand and mineral particles that constitute a porous medium with the ability to transmit fluids. If we drill a hole in one of the solid walls and create a well, and if the pressure inside the sponge is high enough, the oil will flow out of this well and the pressure inside the sponge will be reduced. In oil recovery, this is called the primary production, during which the reservoir does all the work and the oil floats out on its own. For most oil reservoirs, primary production will extract up to 30\% of the oil in the reservoir. To extract more, we have to apply external pressure to the reservoir. One out of many methods to do this, is to pump salt or fresh water into the reservoir through injectors. By doing so, we increase the pressure close to the injector and push the oil towards the wells. This is called secondary production. According to \emph{\citep{lieMrstUrl}}, the average percentage of oil extracted from oil reservoirs on the Norwegian Continental Shelf is approximately 50\%. This means that there is still a lot of oil we are not able to extract! An increase in the amount we are able to extract will not only be economically beneficial for the owners of the reservoir, but it can also help avoiding exploration for new oil reservoirs in more vulnerable areas. This is why it is so important to be able to simulate the flow inside oil reservoirs. If we can find optimal and better methods to recover more oil from each reservoir, it can make a huge impact both financially and environmentally.
 
 \section{Creating a Simulator}
-The process of making a new simulator for oil reservoir simulations, is normally started by creating a prototype. The prototype is made quickly, and in some cases in a high-level programming language, to demonstrate what the finished product will do. This is usually applied to a simplified and conceptual reservoir model, as such prototypes rarely can handle the full extent of a full reservoir simulation. After the prototype phase, performance improvements and further implementations are needed before the actual simulator is ready to perform the simulation on the full reservoir. The Computational Geosciences group in the department of Mathematics and Cybernetics at SINTEF Digital has created the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}} for the  purpose of prototyping. According to MRST's homepage, \textit{"MRST is not primarily a simulator, but is mainly intended as a toolbox for rapid prototyping and demonstration of new simulation methods and modelling concepts."} Most of the tools and simulators in MRST are surprisingly efficient and perform well, even for medium-sized models of real reservoirs, but if you are to simulate more heavy simulation, they recommend to use the Open Porous Media (OPM) Flow simulator \emph{\citep{OPM}}. OPM is a toolbox to build simulations of porous media processes that are mainly written in C and C++. 
+The process of making a new simulator for oil reservoir simulations, is normally started by creating a prototype. The prototype is made quickly, and in some cases in a high-level programming language, to demonstrate what the finished product will do. This is usually applied to a simplified and conceptual reservoir model, as such prototypes rarely can handle the full extent of a full reservoir simulation. After the prototype phase, performance improvements and further implementations are needed before the actual simulator is ready to perform the simulation on the full reservoir. The Computational Geosciences group in the department of Mathematics and Cybernetics at SINTEF Digital has created the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}} for the  purpose of prototyping. According to MRST's homepage, \textit{"MRST is not primarily a simulator, but is mainly intended as a toolbox for rapid prototyping and demonstration of new simulation methods and modelling concepts."} Most of the tools and simulators in MRST are surprisingly efficient and perform well, even for medium-sized models of real reservoirs, but if you are to simulate more heavy simulation, they recommend to use the Open Porous Media (OPM) Flow simulator \emph{\citep{opm}}. OPM is a toolbox to build simulations of porous media processes that are mainly written in C and C++. 
 
 This is where the problem with the building process of a numerical simulator lie. MATLAB is a high-level language that is perfect to quickly make prototypes and demonstrations because of its easy-to-use mathematical syntax. It is, however, not likely to be used for the final simulator, as it is not computational efficient enough. Instead, we have to implement the final simulator in a lower-level language, like C or C++, that is more computational efficient. C and C++ are not built for numerical analysis, hence it usually takes longer time and more programming effort to create the simulator. Experience shows that the development time is usually reduced if one first creates a prototype in a high-level scripting language, and then reimplements a full-featured simulator in a compiled language. The obvious disadvantage of this approach is that there will be a lot of code from the prototype that is unusable in the final simulator. It is possible to call, for example, C++ code from MATLAB, but this can often be tricky and there are many difficulties to make the languages speak together properly. This may lead to unstable code and is not an optimal solution. Ideally, one should have used a language that supports high-level scripting for rapid prototyping and at the same time offers the full computational efficiency of a compiled language.
 
