--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -1,6 +1,6 @@
 \chapter{Local Automatic Differentiation}
 \label{ch:LocalAD}
-This chapter will consider a different approach on how to use AD to solve PDEs. When solving PDEs using a finite volume method each cell will only depend on the neighbouring cells. In the \texttt{FAD} and \texttt{CJAD} implementations, the dependencies are stored in the discrete gradient and divergence operators. The implementations calculate the residual function value and corresponding Jacobian for the whole grid simultaneously by having a vector to store the values and sparse matrices for the Jacobians. Hence, when the discrete gradient and divergence operators are used in the calculation of the residual function in \autoref{ch:FlowSolver}, the Jacobian are obtained with the structure seen in \autoref{fig:flowSolverJacobian}. Local AD is an alternative approach that instead of calculating the residual function for all cells at once, using matrix and vector operations, it iterates through the grid and for each cell calculates the local residual. In the end it will perform exactly the same calculations as \texttt{FAD} and \texttt{CJAD}, but instead of having large vector and matrix calculations, we now have smaller calculations concerning only one cell, and its neighbours, at the time. This new approach is based on the same idea as how AD is implemented in OPM \emph{\citep{OPM}}, which, as said in introduction, is written in C and C++. The AD tool in OPM scales better when the simulations become larger and is the reason why it is used when creating efficient industrial simulators. It is hence interesting to see if you can write similar type of code in Julia and obtain better computational efficiency than what is achieved in MATLAB with MRST, as well as the methods I have already implemented in Julia. If this is possible, Julia could be a language where both prototyping and industrial simulators can be created, making the development process much more efficient. 
+This chapter will consider a different approach on how to use AD to solve PDEs. When solving PDEs using a finite volume method each cell will only depend on the neighbouring cells. In the \texttt{FAD} and \texttt{CJAD} implementations, the dependencies are stored in the discrete gradient and divergence operators. The implementations calculate the residual function value and corresponding Jacobian for the whole grid simultaneously by having a vector to store the values and sparse matrices for the Jacobians. Hence, when the discrete gradient and divergence operators are used in the calculation of the residual function in \autoref{ch:FlowSolver}, the Jacobian are obtained with the structure seen in \autoref{fig:flowSolverJacobian}. Local AD is an alternative approach that instead of calculating the residual function for all cells at once, using matrix and vector operations, it iterates through the grid and for each cell calculates the local residual. In the end it will perform exactly the same calculations as \texttt{FAD} and \texttt{CJAD}, but instead of having large vector and matrix calculations, we now have smaller calculations concerning only one cell, and its neighbours, at the time. This new approach is based on the same idea as how AD is implemented in OPM \emph{\citep{opm}}, which, as said in introduction, is written in C and C++. The AD tool in OPM scales better when the simulations become larger and is the reason why it is used when creating efficient industrial simulators. It is hence interesting to see if you can write similar type of code in Julia and obtain better computational efficiency than what is achieved in MATLAB with MRST, as well as the methods I have already implemented in Julia. If this is possible, Julia could be a language where both prototyping and industrial simulators can be created, making the development process much more efficient. 
 
 \section{Implementation}
 \label{sec:LADImplementation}
@@ -197,5 +197,3 @@ To benchmark the AD performance in the two-phase simulation, I have, similar to 
     \end{tabular}
 \end{table}
 This result gives us an even stronger indication that Julia is a language that can be used both to create quick simulators using a high-level and user-friendly AD methods, like what is implemented in MRST, as well as to create more performance strong simulators, using low-level implementations like in OPM.
-
-\todo[inline]{Se på parallellisering for lokal AD?}
