--- a/07_conclusion_and_future_work.tex
+++ b/07_conclusion_and_future_work.tex
@@ -6,6 +6,7 @@ To investigate this, the thesis has looked further into solving PDEs that descri
 
 The AD libraries are benchmarked in a prototype of a single-phase flow solver, simulating primary production from a reservoir with one well producing oil. The third-party implementation of AD, with its dense matrix structure, proved useless for calculating the sparse Jacobians that correspond to the residual functions. For this simulation, it is more than 30 times slower than the other AD tools and it is not further considered after this result. The two first implementations in Julia are called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). These are high-level AD tools that are easy to use and that are based on the implementation in MRST. \texttt{CJAD} is an extension of \texttt{FAD}, where \texttt{FAD} only uses sparse matrix structure for its Jacobians, \texttt{CJAD} makes optimized calculations when the Jacobian is a diagonal-, identity-, or null matrix. For the single-phase simulation \texttt{CJAD} and MRST perform similar, while \texttt{FAD} is approximately twice as slow. 
 
-The last AD tool in Julia is called local AD and is implemented as a motivation from the properties of the single-phase simulation. It is similar to how AD is implemented in OPM \emph{\citep{OPM}}, which is written in C and C++. Hence, local AD is a lower-level implementation than \texttt{FAD} and \texttt{CJAD}, and since OPM is the tool SINTEF recommends for creating efficient industrial simulators, it is expected that this will give an improved performance. For the single-phase solver, local AD is approximately six times faster than \texttt{CJAD} and MRST. To further test the abilities of local AD, a second simulator is implemented. This is a two-phase solver, simulating the flow of water, in a single layer of the SPE10 reservoir \emph{\citep{SPE10}}, when injecting water into the centre of the reservoir. For this simulation, \texttt{CJAD} and MRST still perform similarly, and the local AD method is approximately five times as fast.
+The last AD tool in Julia is called local AD and is implemented as a motivation from the properties of the single-phase simulation. It is similar to how AD is implemented in OPM \emph{\citep{opm}}, which is written in C and C++. Hence, local AD is a lower-level implementation than \texttt{FAD} and \texttt{CJAD}, and since OPM is the tool SINTEF recommends for creating efficient industrial simulators, it is expected that this will give an improved performance. For the single-phase solver, local AD is approximately six times faster than \texttt{CJAD} and MRST. To further test the abilities of local AD, a second simulator is implemented. This is a two-phase solver, simulating the flow of water, in a single layer of the SPE10 reservoir \emph{\citep{SPE10}}, when injecting water into the centre of the reservoir. For this simulation, \texttt{CJAD} and MRST still perform similarly, and the local AD method is approximately five times as fast.
 
 The implementation and benchmarking of \texttt{CJAD} indicate that Julia is well suited for making quick prototypes of simulators, and the benchmarks of local AD give good indications that it could also be possible to create efficient industrial simulators for oil recovery. However, the implementation has not been tested on a full realistic simulation model or for grid with more than 15 000 cells. As a reference, the full SPE10 grid has 1 122 000 cells. A natural next step in testing Julia is to make an implementation like local AD in MATLAB and compare the two languages. Since local AD depends on fast execution of for-loops, it is not expected that MATLAB will manage to execute local AD efficient, but it is a good test to see if Julia actually is a step forward compared to MATLAB. A final investigation will be to confirm whether Julia can match the computational efficiency of OPM, or other industrial simulators, in a full-scale realistic simulation. 
+
