--- a/configurations/jlcode.sty
+++ b/configurations/jlcode.sty
@@ -53,7 +53,8 @@ in,isa,where,baremodule,begin,break,catch,ccall,const,continue,do,else,elseif,%
 end,export,finally,for,function,global,if,import,importall,let,local,macro,%
 module,quote,return,try,using,while,struct,mutable,primitive,%
 % legacy, to be deprecated in the next release
-type,immutable,abstract,bitstype,typealias%
+type,immutable,abstract,bitstype,typealias,%
+main
 },%
 %
 % julia's literals:
@@ -64,8 +65,7 @@ true,false,ARGS,C_NULL,DevNull,ENDIAN_BOM,ENV,I,Inf,Inf16,Inf32,Inf64,%
 InsertionSort,JULIA_HOME,LOAD_PATH,MergeSort,NaN,NaN16,NaN32,NaN64,%
 PROGRAM_FILE,QuickSort,RoundDown,RoundFromZero,RoundNearest,%
 RoundNearestTiesAway,RoundNearestTiesUp,RoundToZero,RoundUp,STDERR,STDIN,%
-STDOUT,VERSION,catalan,e,eu,eulergamma,golden,im,nothing,pi,γ,π,φ
-    , sum, length, colSum%
+STDOUT,VERSION,catalan,e,eu,eulergamma,golden,im,nothing,pi,γ,π,φ , sum, length, colSum, int%
 },%
 %
 % julia's built-ins:
