--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,8 +1,10 @@
 %\let\cleardoublepage\clearpage
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
-This project report gives an introduction to what Automatic Differentiation (AD) is and how it can be used to calculate the derivatives of any function as precise as an analytic expression, with very little computational effort. It also gives an introduction on how AD can be used to elegantly solve partial differential equations using a finite volume method and a discretization of the gradient- and divergence operators. 
+This thesis gives an introduction to what Automatic Differentiation (AD) is and how it can be used to calculate the derivatives of any function as precise as an analytic expression, with very little computational effort. This has been used to elegantly solve partial differential equations, describing flow in porous media, using a finite volume method and a discretization of the gradient- and divergence operators. The goal of the thesis has been to investigate whether the new programming language called Julia, can be used both as a language for quickly prototyping of new simulators for oil recovery, as well as to implement highly efficient industrial simulators.
 
-An AD library (\textit{ForwardAutoDiff}) has been implemented in the programming language Julia and is compared to other, preexisting AD libraries in Julia and MATLAB. For evaluating the function value and Jacobian of a simple vector function with three input vectors $x$, $y$ and $z$, \textit{ForwardAutoDiff} performs well. For vectors of length between 50 and 2000 elements it performs better than all other AD libraries tested. Tests also indicate that the overhead accompanying for-loops is very little in Julia, and this could open up possibilities for more efficient implementations than what have been done in this project.
+Three different AD libraries has been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  in  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. This is a toolbox meant for quick prototyping. The two first implementations are high-level and user-friendly AD tools that are called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). These implementations are similar to the implementations in MRST. The third implementation is inspired by the implementation of AD in OPM \emph{\citep{opm}}. OPM is a toolbox by the same group at SINTEF, made for creating efficient industrial simulators in C and C++. 
 
-\textit{ForwardAutoDiff} has been used to create a flow solver modelling the flow of oil in a reservoir. Benchmarks show that \textit{ForwardAutoDiff} is approximately 30 percent slower than the implementation in MATLAB at solving this problem. This result applies for all discretizations tested, even though for the smallest discretization, the solution vector is inside the length range where \textit{ForwardAutoDiff} is tested to be the quickest. The results show that, for this example, when the function evaluated is more complex, the implementation in MATLAB handles the calculations better than the \textit{ForwardAutoDiff} currently implemented in Julia. 
+To benchmark the three AD methods, two simulations have been implemented. The first is a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} is the slowest method being approximately two times slower than \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST perform very similar, the method of Local AD is approximately six times faster than these two. The second implemented simulation is a two-phase flow solver, simulating how water flows when injected into a reservoir. This simulation is implemented for \texttt{CJAD} and MRST, which again perform similarly, as well as the method using local AD, which is approximately five times faster.
+
+The benchmarks give promising results indicating that Julia could be a language where it is possible to write prototypes of simulators, using a user-friendly AD tool like \texttt{CJAD}, as well as creating high performance industrial simulators, using an AD tool like local AD.
