--- a/main.tex
+++ b/main.tex
@@ -15,8 +15,8 @@
 \setcounter{page}{0}
 \pagenumbering{roman}
 
-%\input{frontmatter/preface}
-%\input{frontmatter/abstract}
+\input{frontmatter/preface}
+\input{frontmatter/abstract}
 
 \cleardoublepage
 \begingroup
