--- a/03_julia.tex
+++ b/03_julia.tex
@@ -17,16 +17,20 @@ The next translation difference between the languages is whether it is compiled 
 \subsection{Languages for Numerical applications}
 For numerical applications we can separate the most commonly used languages into two groups. The first group is static and compiled languages like C and C++. These are languages that execute very fast but the time it takes to make the programs are longer. The second group are dynamic and interpreted languages like the well known MATLAB\footnote{In 2015 MATLAB introduced a new execution engine that uses JIT compilation \emph{\citep{MatlabJIT}}. However, MATLAB is still a dynamic language that function like a fully interpreted language.} and Python. These languages are easier to use if you want to create numerical simulations, but they execute slower than C and C++. Julia is a dynamic, but (JIT)compiled language. As the creators said in the blog post from 2012: Julia is supposed to have "(...) familiar mathematical notation like Matlab", be "(...) as  powerful  for  linear  algebra  as Matlab(...)" and at the same time be as fast as C. Summed up their goal has been to make a language that is as easy to use as an interpreted and dynamic language, but with the speed of a compiled and static language. Based on this description, Julia seems to be the perfect language for numerical simulations.
 
-\subsection{Code Example}
-So far in this chapter, I have discussed what separates the languages in regards to type checking and how the source code is translated to machine code. These differences will in return effect the syntax of the languages and how we can write the source code. Below I have an example illustrating the differences in implementation of an example for Julia, MATLAB and C++. The example consist of writing a program that creates two random vectors of length $n$, element-wise multiply them together and print the resulting vector in a readable way. This example is first implemented in Julia, where the random vector is created using \texttt{rand(n)}, the element-wise multiplication is performed with the operator \texttt{.*} and printing the result with the \texttt{println(...)} function:
+\subsection{Source Code Example}
+So far in this chapter, I have discussed what separates the languages in regards to type checking and how the source code is translated to machine code. These differences will in return effect the syntax of the languages and how we can write the source code. Below I have an example illustrating the different implementations of an example in Julia, MATLAB and C++. The example consist of writing a program that creates two random vectors of length $n$, element-wise multiply them together and print the resulting vector in a readable way. This example is first implemented in Julia, where the random vector is created using \texttt{rand(n)}, the element-wise multiplication is performed with the operator and printing the result with the \texttt{println(...)} function:
 \lstinputlisting{code/dot_product.jl}
-Very similar to the Julia implementation we have the implementation from MATLAB:
+Very similar to the Julia implementation we have the same program in MATLAB:
 \lstinputlisting{code/dot_product.m}
-The implementations only have couple of small syntax differences, and they both implement the example very efficiently with few lines. C++ on the other side is not created specifically for mathematical programming and without importing any libraries, the implementation of the example becomes much more 
+The implementations only have a couple of small syntax differences, and they both implement the example efficiently with few lines. C++ on the other side is not created specifically for mathematical programming and without importing any external libraries, the implementation of the example becomes much more comprehensive:
 \lstinputlisting{code/dot_product.cpp}
-\todo[inline]{Mulig dette eksempelet ikke er så godt.}
+\todo[inline]{Vurdere eksempelet.}
+The first obvious difference is that C++ is not a scripting language like MATLAB and Julia. This means that code we want to execute, needs to be inside a function. This could contribute making the implementation of new code more tedious in C++, than in MATLAB and Julia. From the declaration of the variables it is clear that C++ is a static language, where each variable needs to have a predefined type. Lastly there are no built in functions to create a random vector, element-wise multiply vectors nor printing vectors. These operations needs to be implemented, and shows how C++ is a lower-level language than MATLAB and Julia.
+
+You could argue that this comparison is unfair for C++, as you would either import libraries that have functions to create random vectors, do element-wise multiplication and print vectors, or you would overload operators to do this. By either using such libraries or implemented operators, we would be able to implement the example more compact like in Julia and MATLAB. However, the implementations above are not built in, and they needs to be implemented. This can either be done by importing an external library that has implemented this already or by overloading the operators yourself. Hence, the example illustrates some of the differences between two languages that are created with mathematical programming in mind and a language that is not.
+
 \section{History of Julia}
-The process of creating a new programming language is however long. In 2009 the creators began the project of creating Julia and in the blog post \emph{\citep{juliaBlogRelease2012}} from 2012 they said "It’s not complete, but it’s time for a 1.0 release — the language we’ve created is called Julia". In a new blog post from August 8th 2018 \emph{\citep{juliaBlogReleaseV1.0}}, where they released the actual version 1.0 they admitted that they had jumped the gun a little with the mentioning of v1.0 in 2012, as it took more than six years before it actually happened. But after almost ten years of development v1.0 of the Julia language was released. The major consequence of a 1.0 release is that from this version and on, they guarantee backward compatibility. When they did not guarantee backward compatibility, code that worked on version, 0.1, 0.2 etc. would not necessarily run on newer versions of Julia. But from v1.0, all code that run on this version, will also run on future releases. This was a huge milestone for the Julia language. 
+The process of creating a new programming language is long. In 2009 the creators began the project of creating Julia and in the blog post \emph{\citep{juliaBlogRelease2012}} from 2012 they said "It’s not complete, but it’s time for a 1.0 release — the language we’ve created is called Julia". In a new blog post from August 8th 2018 \emph{\citep{juliaBlogReleaseV1.0}}, where they released the actual version 1.0 they admitted that they had jumped the gun a little with the mentioning of v1.0 in 2012, as it took more than six years before it actually happened. But after almost ten years of development v1.0 of the Julia language was released. The major consequence of a 1.0 release is that from this version and on, they guarantee backward compatibility. When they did not guarantee backward compatibility, code that worked on version, 0.1, 0.2 etc. would not necessarily run on newer versions of Julia. But from v1.0, all code that run on this version, will also run on future releases. This was a huge milestone for the Julia language. 
 
 A consequence of the non backward compatibility is that when you search the internet for help in Julia, currently less than one year after the v1.0 release, you could end up finding solutions to your problem that no longer works. Hence as of now you need to be careful and check the date of the answers, and keep in mind that if it is from before v1.0 it might no longer work. This can at some times be frustrating, especially when you try to learn the language. However, now that there is backward compatibility for future releases, as time goes by, this problem will disappear as pre-v1.0 answers will eventually drown by post v1.0 answers.
 
@@ -73,6 +77,10 @@ When writing code for numerical simulations, or any other code for that matter, 
 
 An option to reduce possible sources of errors is to benchmark the code multiple times and instead use the average time spent. However, then you have to write this extra code every time you want to benchmark a function. \emph{\cite{BenchmarkTools}} is a library that gives you a macro function called \texttt{@btime} that does exactly this so that you do not have to write repetitive code. It uses \texttt{@time} multiple times to get a result that is less prone to sources of errors. The primary macro function from Benchmarktools is however \texttt{@benchmark} which returns minimum, maximum, mean and average time, together with memory allocation and usage and information of number of samples it has taken. All this is easy to use because of Julia's metaprogramming and makes it quick to benchmark all types of simulations and codes safely and without repeating your source code.
 
-Subsection \ref{sec:profiling}, \ref{sec:debugger}, \ref{sec:benchmarking} are great examples of how powerful tools that help developers code are being created less than a year after v1.0 of Julia was released. This community, together with the ideas of a very fast language, makes Julia a very interesting language to try out and to see what is possible to achieve concerning easiness of code writing and execution performance.
+\subsection{Parallel Computing}
+\label{sec:parallelComputing}
+Parallel computing is wide topic that can be performed in many different ways. However, the main idea is to split a task into smaller problems and execute them simultaneously. New computers are delivered with multi-core processors, giving them this ability to perform multiple tasks simultaneously. The speedup for programs using parallel computing compared to regular linear computing can be up to the number of cores. In reality, in best case scenarios the speedup can actually be more than number of cores. In these cases the extra speedup is an effect caused by the memory allocation becoming easier when the problem executed is split up into smaller problems. However, for the computer to be able to perform the parallel computing, the code needs to be parallelised. 
 
-\todo[inline]{Ta med eksempler på syntaksforskjeller på matlab/Julia og C++}
+But for the computers to be able to execute parallel operations, the code needs to be parallelized. 
+
+Subsection \ref{sec:profiling}, \ref{sec:debugger}, \ref{sec:benchmarking} and \ref{sec:parallelComputing} are great examples of how powerful tools that help developers code are being created less than a year after v1.0 of Julia was released. This community, together with the ideas of a very fast language, makes Julia a very interesting language to try out and to see what is possible to achieve concerning easiness of code writing and execution performance.
