Updates from Overleaf

--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -179,7 +179,7 @@ Naturally, instead of having a single function to assemble equations, the simula
 Even though we are most interested to see how the AD tools perform, we also have to see what we are simulating to make sure that it is correct implemented. \autoref{fig:waterSatResultsSPE10} shows the development of the water saturation in the SPE10 grid, for a simulation over three years. The total amount of water we have injected after three years is 0.135 of the total pore volume in the reservoir. As we can see from the figure, the assumption we had that the water will flow to the left was correct. We can also see that it follows paths in the reservoir that are optimal for the water to flow. One example that is easy to spot, is that the water, at least in the beginning, avoids the area straight left of the injector. If we go back to \autoref{fig:porositySPE10} and \autoref{fig:permeabilitySPE10}, we can see that in this area, both the porosity and the permeability are low.
 \begin{figure}
     \centering
-    \includegraphics[width = .8\textwidth,clip=true, trim=100 30 100 10]{figures/waterSaturation4x1ThreeYears.eps}
+    \includegraphics[width = .8\textwidth,clip=true, trim=100 30 100 10]{figures/waterSaturation4x1ThreeYears.pdf}
     \caption{Color plot of the water saturation development in the SPE10 grid over a period of three years. Total injected water after three years is 13.5\% of the total pore volume in the reservoir.}
     \label{fig:waterSatResultsSPE10}
 \end{figure}
