Updates from Overleaf

--- a/03_julia.tex
+++ b/03_julia.tex
@@ -79,8 +79,9 @@ An option to reduce possible sources of errors is to benchmark the code multiple
 
 \subsection{Parallel Computing}
 \label{sec:parallelComputing}
-Parallel computing is wide topic that can be performed in many different ways. However, the main idea is to split a task into smaller problems and execute them simultaneously. New computers are delivered with multi-core processors, giving them this ability to perform multiple tasks simultaneously. The speedup for programs using parallel computing compared to regular linear computing can be up to the number of cores. In reality, in best case scenarios the speedup can actually be more than number of cores. In these cases the extra speedup is an effect caused by the memory allocation becoming easier when the problem executed is split up into smaller problems. However, for the computer to be able to perform the parallel computing, the code needs to be parallelised. 
+Parallel computing is wide topic that can be performed in many different ways. However, the main idea is to split a task into smaller problems and execute them simultaneously. New computers are delivered with multi-core processors, giving them the ability to perform multiple tasks simultaneously. The speedup for programs using parallel computing compared to regular linear computing can be up to the number of cores, and even in best case scenarios, the speedup can actually be more than number of cores. In these cases the extra speedup is an effect caused by the memory allocation becoming easier when the task executed is split up into smaller problems. However, for the computer to be able to perform parallel computing, the source code needs to be written such that it supports parallelization. And even though the possible computational gain from parallellization can be huge, a bad written parallel code can execute slower than the linear execution. 
 
-But for the computers to be able to execute parallel operations, the code needs to be parallelized. 
+In Julia, parallel computing is implemented using metaprogramming \emph{\citep{ParallellComputing}}.  
 
-Subsection \ref{sec:profiling}, \ref{sec:debugger}, \ref{sec:benchmarking} and \ref{sec:parallelComputing} are great examples of how powerful tools that help developers code are being created less than a year after v1.0 of Julia was released. This community, together with the ideas of a very fast language, makes Julia a very interesting language to try out and to see what is possible to achieve concerning easiness of code writing and execution performance.
+
+Subsection \ref{sec:profiling}, \ref{sec:debugger}, \ref{sec:benchmarking} and \ref{sec:parallelComputing} are all great examples of how powerful tools that help developers code are being created less than a year after v1.0 of Julia was released. This community, together with the ideas of a very fast language, makes Julia a very interesting language to try out and to see what is possible to achieve concerning easiness of code writing and execution performance.
