--- a/04_implementation.tex
+++ b/04_implementation.tex
@@ -59,7 +59,7 @@ In mathematical programming languages like MATLAB and Julia, there is a differen
 The .* operator, on the other hand, represents element-wise multiplication. This means that if we have regular column vectors like $u$ and $w = v'$, where $w$ is the transpose of $v$, the evaluation of $u.*w$ will be element-wise multiplication of $u$ and $w$, into a new vector of the same dimensions as $u$ and $w$. Here, one needs to make a choice in the implementation of multiplication and division for AD in Julia, because as of now, there are no good ways of overloading any dot operators for custom types such as AD. \emph{\citet{JuliaIssueDot}} explains the problems of overloading the element-wise .* operator, and states that there is no good way of actually doing this. The issue has still not been resolved. With this in mind, and that there will only be used element-wise multiplication in this project, I have decided that I herein redefine * and implement it as element-wise multiplication. This means that if I have written regular multiplication expressions consisting of at least one AD-variable, element-wise multiplication will be executed.
 
 \subsection{Optimizing \texttt{ForwardAutoDiff}}
-By looking closer at the implementation of the Jacobian in \texttt{FAD}, we can find that in some cases there are better approaches to storing the Jacobian that will gain computational efficiency. Before looking closer at the specific situations, I will explain how the sparse matrix type, \texttt{SparseMatrixCSC}, that \texttt{FAD} uses is built up and how it works. \texttt{SparseMatrixCSC} stands for \textit{Compressed Sparse Column Sparse Matrix Storage} which is a standard format for storing spare matrices \emph{\citep{doi:10.1137/1.9780898718003.ch3}}. According to Julia docs \emph{\citep{SparseMatrixCSC}} the SparseMatrixCSC struct is given as
+By looking closer at the implementation of the Jacobian in \texttt{FAD}, we can find that in some cases there are better approaches to storing the Jacobian that will gain computational efficiency. Before looking closer at the specific situations, I will explain how the sparse matrix type, \texttt{SparseMatrixCSC}, that \texttt{FAD} uses is built up and how it works. \texttt{SparseMatrixCSC} stands for \textit{Compressed Sparse Column Sparse Matrix Storage} which is a standard format for storing spare matrices \emph{\citep{doi:10.1137/1.9780898718003.ch3}}. According to the Julia documentation \emph{\citep{SparseMatrixCSC}} the SparseMatrixCSC struct is given as
 \lstinputlisting{code/SparseMatrixCSCStruct.jl}
 It represents a matrix with three vectors and two integers. The integers represent the size of the matrix and the three vectors represent all non-zero elements in the matrix. To explain how the vectors work, consider the example of a matrix \textbf{A} with the corresponding \texttt{SparseMatrixCSC} struct variables:
 \begin{multicols}{2}
