--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -325,3 +325,10 @@ eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9780898718003.ch3}
   booktitle={ECMOR XVI-16th European Conference on the Mathematics of Oil Recovery},
   year={2018}
 }
+@misc{ParallellComputing,
+    key = {Parallel computing Julia docs},
+    url = {https://docs.julialang.org/en/v1/manual/parallel-computing/index.html},
+    urldate = {2019-05-29},
+    year = {n.d.},
+    note = {Accessed 29.05.2019}
+}
